--- a/QQWeb/pom.xml
+++ b/QQWeb/pom.xml
@@ -50,6 +50,10 @@
             <artifactId>pinyin4j</artifactId>
             <version>2.5.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>com.alibaba</groupId>
