实现上传头像功能 但是无法回显

--- a/QQWeb/src/main/resources/application.yml
+++ b/QQWeb/src/main/resources/application.yml
@@ -11,3 +11,8 @@ spring:
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
   thymeleaf:
     prefix: classpath:/templates/
+
+server:
+  port: 8080
+com:
+  ccr: ${server.port}
